# helix

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_STATUS.md
.claude/: settings.json
docker/: Dockerfile  docker-compose.yml
docs/: BENCHMARKS.md  io_uring_plan.md  shared-wal-integration-plan.md  shared-wal-investigation-notes.md
docs/adr/: 0000-template.md  0001-raft-for-partition-replication.md  0002-synchronous-state-machines.md  0003-strongly-typed-identifiers.md  0004-tick-based-raft-timing.md  0005-conservative-wal-corruption-recovery.md  README.md
docs/design/: actor-model-architecture.md  controller-partition.md  e2e-tiering-tests.md  helix-workload.md  idempotent-producers.md  object-storage.md  throughput-improvement-plan.md  vote-state-persistence.md
docs/designs/: shared-wal.md
helix-core/: Cargo.toml
helix-core/src/: error.rs  lib.rs  limits.rs  record.rs  types.rs
helix-flow/: Cargo.toml
helix-flow/src/: aimd.rs  controller.rs  error.rs  fair_queue.rs  lib.rs  token_bucket.rs
helix-kafka-compat/: Cargo.toml
helix-kafka-compat/src/: codec.rs  error.rs  handler.rs  lib.rs  server.rs
helix-kafka-compat/tests/: integration.rs
helix-partition/: Cargo.toml
helix-partition/src/: consumer.rs  error.rs  lib.rs  log.rs  partition.rs  producer.rs  replication.rs
helix-progress/: Cargo.toml
helix-progress/src/: bitmap.rs  error.rs  lib.rs  manager.rs  storage.rs  types.rs
helix-raft/: Cargo.toml
helix-raft/src/: client.rs  config.rs  lib.rs  log.rs  message.rs  multi.rs  snapshot.rs  state.rs  storage.rs  wal_storage.rs
helix-routing/: Cargo.toml
helix-routing/src/: coordinator.rs  handler.rs  leader_cache.rs  lib.rs  router.rs  shard_map.rs  transfer.rs
helix-runtime/: Cargo.toml
helix-runtime/src/: codec.rs  config.rs  lib.rs  server.rs  transport.rs  transport_trait.rs
helix-server/: Cargo.toml  build.rs
helix-server/benches/: server_throughput.rs
helix-server/proto/: helix.proto
helix-server/src/: controller.rs  error.rs  group_map.rs  grpc.rs  lib.rs  main.rs  partition_storage.rs  producer_state.rs  service.rs  storage.rs  vote_store.rs
helix-server/src/kafka/: codec.rs  error.rs  handler.rs  mod.rs  server.rs
helix-server/src/service/: actor_setup.rs  batcher.rs  mod.rs  output_processor.rs  partition_actor.rs  router.rs  tick.rs  wal_actor.rs
helix-server/src/service/handlers/: blob.rs  consumer.rs  metadata.rs  mod.rs  read.rs  topic.rs  util.rs  write.rs
helix-tests/: Cargo.toml
helix-tests/src/: helix_service_actor.rs  helix_service_dst.rs  lib.rs  multi_raft_tests.rs  multi_raft_verified_tests.rs  progress_tests.rs  properties.rs  raft_actor.rs  raft_dst.rs  raft_tests.rs  scenarios.rs  server_tests.rs  shard_transfer_tests.rs  shared_wal_dst.rs  shared_wal_integration_tests.rs  simulated_transport.rs  simulation_tests.rs  tier_tests.rs  wal_dst.rs  wal_tests.rs
helix-tier/: Cargo.toml
helix-tier/src/: error.rs  filesystem.rs  lib.rs  manager.rs  metadata.rs  s3.rs  storage.rs
helix-tier/tests/: s3_integration.rs
helix-wal/: Cargo.toml
helix-wal/benches/: buffered_wal_bench.rs  shared_wal_bench.rs  storage_comparison.rs  wal_read.rs  wal_write.rs
helix-wal/examples/: simple_bench.rs
helix-wal/src/: buffered.rs  entry.rs  error.rs  lib.rs  segment.rs  shared_entry.rs  shared_wal.rs  storage.rs  wal.rs
helix-wal/src/storage/: io_uring_storage.rs  io_uring_worker.rs  mod.rs  simulated.rs  tokio_storage.rs
helix-workload/: Cargo.toml
helix-workload/src/: executor.rs  history.rs  lib.rs  operation.rs  payload.rs  profiles.rs  verification.rs  workload.rs
helix-workload/tests/: actor_mode_correctness.rs  controller_failover.rs  integration.rs  steady_state_throughput.rs  tiering_e2e.rs
specs/: README.md  raft.cfg  raft.tla  raft_TTrace_1768026812.tla  raft_TTrace_1768027139.tla
