[workspace]
resolver = "2"
members = [
    "helix-core",
    "helix-partition",
    "helix-runtime",
    "helix-wal",
    "helix-raft",
    "helix-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/example/helix"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates.
helix-core = { path = "helix-core" }
helix-partition = { path = "helix-partition" }
helix-runtime = { path = "helix-runtime" }
helix-wal = { path = "helix-wal" }
helix-raft = { path = "helix-raft" }
helix-tests = { path = "helix-tests" }

# DST Framework - Bloodhound provides deterministic simulation.
bloodhound = { path = "../bloodhound" }

# Async runtime.
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization.
bytes = "1.5"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }

# Data structures.
roaring = "0.10"

# Hashing and checksums.
crc32fast = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Random number generation (deterministic - use ChaCha via Bloodhound).
rand = "0.8"
rand_chacha = "0.3"

# Tracing and metrics.
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling.
thiserror = "1.0"

# Testing.
proptest = "1.4"
criterion = "0.5"

[workspace.lints.rust]
# Safety: All warnings are errors.
warnings = "deny"
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
# Safety: Strictest clippy settings.
all = "deny"
pedantic = "warn"
nursery = "warn"

# Performance: Explicit is better than implicit.
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"

# Developer experience: Consistency.
module_name_repetitions = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
