[workspace]
resolver = "2"
members = [
    "helix-core",
    "helix-flow",
    "helix-progress",
    "helix-routing",
    "helix-runtime",
    "helix-server",
    "helix-tier",
    "helix-wal",
    "helix-raft",
    "helix-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/example/helix"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates.
helix-core = { path = "helix-core" }
helix-flow = { path = "helix-flow" }
helix-progress = { path = "helix-progress" }
helix-routing = { path = "helix-routing" }
helix-runtime = { path = "helix-runtime" }
helix-server = { path = "helix-server" }
helix-wal = { path = "helix-wal" }
helix-raft = { path = "helix-raft" }
helix-tests = { path = "helix-tests" }
helix-tier = { path = "helix-tier" }

# DST Framework - Bloodhound provides deterministic simulation.
bloodhound = { git = "https://github.com/nerdsane/bloodhound" }

# Async runtime.
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-uring = "0.5"
async-trait = "0.1"
futures = "0.3"

# Serialization.
bytes = "1.5"
prost = "0.12"
prost-build = "0.12"
serde = { version = "1.0", features = ["derive"] }

# gRPC.
tonic = "0.11"
tonic-build = "0.11"

# Data structures.
roaring = "0.10"

# Hashing and checksums.
crc32fast = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Random number generation (deterministic - use ChaCha via Bloodhound).
rand = "0.8"
rand_chacha = "0.3"

# Tracing and metrics.
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling.
thiserror = "1.0"

# CLI.
clap = { version = "4.4", features = ["derive"] }

# Testing.
proptest = "1.4"
criterion = "0.5"
hdrhistogram = "7.5"
tempfile = "3.10"

[workspace.lints.rust]
# Safety: All warnings are errors.
warnings = "deny"
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
# Safety: Strictest clippy settings.
# Groups have lower priority so individual lints can override them.
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Performance: Explicit is better than implicit.
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"

# Developer experience: Consistency.
module_name_repetitions = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
