[package]
name = "helix-flow"
description = "Flow control and I/O scheduling for Helix"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Internal crates.
helix-core = { workspace = true }

# Async runtime.
async-trait = { workspace = true }
tokio = { workspace = true }

# Tracing.
tracing = { workspace = true }

# Error handling.
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
