[package]
name = "helix-runtime"
description = "Production runtime implementations for Helix"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
helix-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
