[package]
name = "helix-runtime"
description = "Production runtime implementations for Helix"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
helix-core = { workspace = true }
helix-raft = { workspace = true }
helix-routing = { workspace = true }
helix-wal = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
socket2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
