[package]
name = "helix-server"
description = "Helix distributed log server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "helix-server"
path = "src/main.rs"

[dependencies]
helix-core = { workspace = true }
helix-raft = { workspace = true }
helix-runtime = { workspace = true }
helix-partition = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
