[package]
name = "helix-server"
description = "Helix distributed log server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
s3 = ["helix-tier/s3"]

[[bin]]
name = "helix-server"
path = "src/main.rs"

[dependencies]
helix-core = { workspace = true }
helix-progress = { workspace = true }
helix-raft = { workspace = true }
helix-runtime = { workspace = true }
helix-tier = { workspace = true }
helix-wal = { workspace = true }
async-trait = { workspace = true }
kafka-protocol = { workspace = true }
tokio = { workspace = true }
socket2 = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
hdrhistogram = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
hdrhistogram = { workspace = true }
tempfile = { workspace = true }
tokio-stream = { workspace = true }

[[bench]]
name = "server_throughput"
harness = false

[[bin]]
name = "helix-bench"
path = "src/bin/helix_bench.rs"
