[package]
name = "helix-tests"
description = "Bloodhound simulation tests for Helix"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
helix-core = { workspace = true }
helix-progress = { workspace = true }
helix-raft = { workspace = true }
helix-routing = { workspace = true }
helix-runtime = { workspace = true }
helix-server = { workspace = true }
helix-tier = { workspace = true }
helix-wal = { workspace = true }
bloodhound = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
rand_chacha = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tracing-subscriber = { workspace = true }
turmoil = { workspace = true }
