[package]
name = "helix-wal"
description = "Write-Ahead Log implementation for Helix"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
io-uring = ["dep:tokio-uring"]

[dependencies]
helix-core = { workspace = true }
bloodhound = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

# io_uring support (Linux only).
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
hdrhistogram = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "wal_write"
harness = false

[[bench]]
name = "wal_read"
harness = false

[[bench]]
name = "buffered_wal_bench"
harness = false

[[bench]]
name = "storage_comparison"
harness = false

[[bench]]
name = "shared_wal_bench"
harness = false
