[package]
name = "helix-workload"
version.workspace = true
edition.workspace = true
description = "E2E verifiable workload testing for Helix"
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Async runtime.
tokio = { workspace = true, features = ["process"] }
async-trait.workspace = true

# Kafka client.
rdkafka.workspace = true

# Serialization.
bytes.workspace = true
crc.workspace = true

# Random number generation (deterministic).
rand.workspace = true
rand_chacha.workspace = true

# Error handling.
thiserror.workspace = true

# Logging.
tracing.workspace = true

# Time and statistics.
hdrhistogram.workspace = true

# Internal dependencies.
helix-core.workspace = true

[[bin]]
name = "integration_test"
path = "src/bin/integration_test.rs"

[dev-dependencies]
tempfile.workspace = true
